--- a/react/router-tutorial/package.json
+++ b/react/router-tutorial/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "todo-app",
+  "name": "router-tutorial",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.6",
-    "cra-template": "1.0.3",
-    "node-sass": "^4.14.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1",
-    "react-virtualized": "^9.21.2",
-    "reacticons": "^0.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
