--- a/react/blog/blog-backend/package.json
+++ b/react/blog/blog-backend/package.json
@@ -4,8 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
-    "koa-router": "^9.4.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^9.4.0",
+    "mongoose": "^5.10.0"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
@@ -13,7 +20,7 @@
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "start": "node src",
-    "start:dev": "nodemon --watch src/ src/index.js"
+    "start": "node -r esm src",
+    "start:dev": "nodemon --watch src/ -r esm src/index.js"
   }
 }
